# bpatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bpatch.cpp  bpatch_json.md  diagrams.md  rebuild.cmd  rebuild.sh
.github/workflows/: cmake-multi-platform.yml
IntegrationTests/: in_tests.cmd  in_tests.sh
IntegrationTests/binaries/: bin1.data  bin3.data  bin4.data  bin5.data
IntegrationTests/expected/: decimal.expected  hexadecimal.expected  mixed.expected  text.expected
IntegrationTests/scripts/: choicereplace.json  decimal.json  fromhex.json  fromhex1byte.json  fromhex8bytes.json  fromhex9bytes.json  hexadecimal.json  mixed.json  text.json  tohex.json  withbin.json
IntegrationTests/sources/: choicereplace.test  withbin.test
documentation/: bpatch_uml.drawio
srcbpatch/: CMakeLists.txt  actionscollection.cpp  actionscollection.h  binarylexeme.cpp  binarylexeme.h  bpatchfolders.cpp  bpatchfolders.h  coloredconsole.cpp  coloredconsole.h  consoleparametersreader.cpp  consoleparametersreader.h  dictionary.cpp  dictionary.h  dictionarykeywords.cpp  dictionarykeywords.h  fileprocessing.cpp  fileprocessing.h  flexiblecache.cpp  flexiblecache.h  jsonparser.cpp  jsonparser.h  processing.cpp  processing.h  stdafx.h  streamreplacer.cpp  streamreplacer.h  timemeasurer.cpp  timemeasurer.h  trie.cpp  trie.h
testbpatch/: CMakeLists.txt  pch.h  test.cpp
wildcharacters/: CMakeLists.txt  wildcharacters.cpp  wildcharacters.h
